--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentParameterSliderView/AdjustmentParameterSliderView.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentParameterSliderView/AdjustmentParameterSliderView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -21,13 +21,13 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="16"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GdM-VB-OZp">
-                                    <rect key="frame" x="16" y="0.0" width="42" height="16"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="42" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qCw-WG-At2">
-                                    <rect key="frame" x="356" y="0.0" width="42" height="16"/>
+                                    <rect key="frame" x="372" y="0.0" width="42" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -41,8 +41,8 @@
                                 <constraint firstAttribute="bottom" secondItem="GdM-VB-OZp" secondAttribute="bottom" id="mLi-ps-mNl"/>
                                 <constraint firstItem="qCw-WG-At2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="GdM-VB-OZp" secondAttribute="trailing" constant="16" id="oKV-db-plx"/>
                                 <constraint firstAttribute="bottom" secondItem="qCw-WG-At2" secondAttribute="bottom" id="pvN-fe-dIk"/>
-                                <constraint firstItem="GdM-VB-OZp" firstAttribute="leading" secondItem="VfK-jy-K9Y" secondAttribute="leading" constant="16" id="tM9-nY-XX6"/>
-                                <constraint firstAttribute="trailing" secondItem="qCw-WG-At2" secondAttribute="trailing" constant="16" id="u7U-YL-4Yh"/>
+                                <constraint firstItem="GdM-VB-OZp" firstAttribute="leading" secondItem="VfK-jy-K9Y" secondAttribute="leading" id="tM9-nY-XX6"/>
+                                <constraint firstAttribute="trailing" secondItem="qCw-WG-At2" secondAttribute="trailing" id="u7U-YL-4Yh"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dB0-I4-r1x">
