--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/SelectionMenuController/SelectionMenuCell.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/SelectionMenuController/SelectionMenuCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -45,6 +45,8 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="checkmarkImageView" destination="PRQ-ym-2GZ" id="v60-XU-wfU"/>
+                <outlet property="leadingContraint" destination="Qo5-XS-A5q" id="dW7-v1-dVd"/>
+                <outlet property="stackView" destination="NAs-Re-rVZ" id="E2N-Wc-8KC"/>
                 <outlet property="titleLabel" destination="6WV-FK-b9t" id="dEf-Pe-BCh"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
