--- a/Depo/Depo/Presentation/UserStories/Others/PhotoVideoDetail/View/PhotoVideoDetailViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PhotoVideoDetail/View/PhotoVideoDetailViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -8,10 +8,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PhotoVideoDetailViewController" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PhotoVideoDetailViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="bottomBlackView" destination="XFi-qo-p1Z" id="n2g-5n-Pae"/>
-                <outlet property="collapseDetailView" destination="WpF-wx-hyC" id="0vv-Ca-o1f"/>
                 <outlet property="collectionView" destination="ZzB-kC-yvt" id="Ggb-ac-yeQ"/>
                 <outlet property="swipeUpContainerView" destination="W8L-hg-9Ki" id="utr-Qe-8xW"/>
                 <outlet property="view" destination="iN0-l3-epB" id="kbZ-Zd-ek1"/>
@@ -26,7 +25,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W8L-hg-9Ki">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
-                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ZzB-kC-yvt" customClass="PreventCollectionView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ZzB-kC-yvt" customClass="PreventCollectionView" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="zTm-wi-nWa">
@@ -61,33 +60,14 @@
                         <constraint firstAttribute="height" constant="44" id="DHo-1v-JvR"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WpF-wx-hyC">
-                    <rect key="frame" x="15" y="15" width="30" height="30"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="z6w-pj-Y6s">
-                            <rect key="frame" x="8" y="8" width="14" height="14"/>
-                        </imageView>
-                    </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                    <constraints>
-                        <constraint firstItem="z6w-pj-Y6s" firstAttribute="top" secondItem="WpF-wx-hyC" secondAttribute="top" constant="8" id="2aI-i4-yJW"/>
-                        <constraint firstAttribute="trailing" secondItem="z6w-pj-Y6s" secondAttribute="trailing" constant="8" id="3t0-gw-eqT"/>
-                        <constraint firstAttribute="bottom" secondItem="z6w-pj-Y6s" secondAttribute="bottom" constant="8" id="4Iq-jh-bFG"/>
-                        <constraint firstAttribute="width" constant="30" id="Db7-xr-gnK"/>
-                        <constraint firstAttribute="height" constant="30" id="Z0K-uM-K1M"/>
-                        <constraint firstItem="z6w-pj-Y6s" firstAttribute="leading" secondItem="WpF-wx-hyC" secondAttribute="leading" constant="8" id="wJ0-2Y-ntl"/>
-                    </constraints>
-                </view>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="EkB-f5-2OH" secondAttribute="trailing" id="6NC-Rh-Ca5"/>
                 <constraint firstItem="hTs-d8-e25" firstAttribute="bottom" secondItem="EkB-f5-2OH" secondAttribute="bottom" id="NfP-1l-2sH"/>
-                <constraint firstItem="W8L-hg-9Ki" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="T96-8x-22r" customClass="TopSafeAreaConstraint" customModule="LifeTech_lifedrive" customModuleProvider="target"/>
-                <constraint firstItem="WpF-wx-hyC" firstAttribute="top" secondItem="hTs-d8-e25" secondAttribute="top" constant="15" id="TB8-ZS-bdv"/>
+                <constraint firstItem="W8L-hg-9Ki" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="T96-8x-22r" customClass="TopSafeAreaConstraint" customModule="Billo" customModuleProvider="target"/>
                 <constraint firstItem="W8L-hg-9Ki" firstAttribute="trailing" secondItem="EkB-f5-2OH" secondAttribute="trailing" id="XCq-UU-yaw"/>
                 <constraint firstItem="W8L-hg-9Ki" firstAttribute="bottom" secondItem="EkB-f5-2OH" secondAttribute="bottom" id="fDW-8e-SDZ"/>
-                <constraint firstItem="WpF-wx-hyC" firstAttribute="leading" secondItem="hTs-d8-e25" secondAttribute="leading" constant="15" id="gnl-yB-YR9"/>
                 <constraint firstItem="EkB-f5-2OH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vGC-fV-ORB"/>
                 <constraint firstItem="W8L-hg-9Ki" firstAttribute="leading" secondItem="EkB-f5-2OH" secondAttribute="leading" id="zU2-XF-l9j"/>
             </constraints>
@@ -95,7 +75,4 @@
             <point key="canvasLocation" x="31.199999999999999" y="63.418290854572717"/>
         </view>
     </objects>
-    <resources>
-        <image name="back_icon.png" width="16" height="16"/>
-    </resources>
 </document>
