bigger frame size for a slider

--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFilterSliderView/PreparedFilterSliderView.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFilterSliderView/PreparedFilterSliderView.xib
@@ -15,11 +15,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hfv-WU-IWO">
-                    <rect key="frame" x="0.0" y="36" width="414" height="25"/>
+                    <rect key="frame" x="0.0" y="24" width="414" height="41"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qvC-BD-h5v">
-                    <rect key="frame" x="356" y="16" width="42" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qvC-BD-h5v">
+                    <rect key="frame" x="356" y="8" width="42" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="SG2-H8-NXq"/>
                     </constraints>
@@ -30,12 +30,12 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="qvC-BD-h5v" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="0RH-Vj-nMH"/>
-                <constraint firstAttribute="bottom" secondItem="Hfv-WU-IWO" secondAttribute="bottom" constant="4" id="QfX-Gj-f7k"/>
+                <constraint firstItem="qvC-BD-h5v" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="0RH-Vj-nMH"/>
+                <constraint firstAttribute="bottom" secondItem="Hfv-WU-IWO" secondAttribute="bottom" id="QfX-Gj-f7k"/>
                 <constraint firstAttribute="trailing" secondItem="qvC-BD-h5v" secondAttribute="trailing" constant="16" id="WjC-W2-kSy"/>
                 <constraint firstItem="Hfv-WU-IWO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="exN-6V-Xud"/>
                 <constraint firstAttribute="trailing" secondItem="Hfv-WU-IWO" secondAttribute="trailing" id="ld6-Zy-1yJ"/>
-                <constraint firstItem="Hfv-WU-IWO" firstAttribute="top" secondItem="qvC-BD-h5v" secondAttribute="bottom" constant="4" id="wGD-B2-NVj"/>
+                <constraint firstItem="Hfv-WU-IWO" firstAttribute="top" secondItem="qvC-BD-h5v" secondAttribute="bottom" id="wGD-B2-NVj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
