--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/AnimationCard/AnimationCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/AnimationCard/AnimationCard.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -146,6 +146,7 @@
             <connections>
                 <outlet property="bottomButton" destination="4Zl-cS-Vds" id="pTa-Sh-D9u"/>
                 <outlet property="photoImageView" destination="Q8L-Bp-NgS" id="FBL-dy-CwA"/>
+                <outlet property="shareButton" destination="PlK-kk-NOo" id="Cej-pY-Xq0"/>
                 <outlet property="subTitleLabel" destination="Y6l-AY-WpA" id="SYP-D6-jwy"/>
                 <outlet property="titleLabel" destination="bNu-b0-weG" id="SSZ-kZ-7T6"/>
             </connections>
